manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: isbonrecording
  name: isbonrecording
