manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: blink-controller
  name: is-bon-recording
  namespace: default
spec:
  progressDeadlineSeconds: 30
  replicas: 1
  selector:
    matchLabels:
      run: blink-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: blink-controller
    spec:
      nodeSelector:
        feature.node.kubernetes.io/custom-blink1: 'true'
      containers:
      - image: danielmanners/isbonrecording:latest
        imagePullPolicy: Always
        name: blink-controller
        # securityContext:
        #   privileged: true
        resources:
          limits:
            cpu: "1"
            memory: 160Mi
          requests:
            cpu: 500m
            memory: 96Mi
        volumeMounts:
          - mountPath: /dev/hidraw0
            name: ttyblink
        ports:
        - containerPort: 80
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
        - name: ttyblink
          hostPath:
            path: /dev/hidraw0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 3
