manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: isbonrecording
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: isbonnierecording
  sessionAffinity: None
  type: ClusterIP
